--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: TicTacToe;
+    src: url(./assets/fonts/TicTacToe.ttf);
+}
+
+@font-face {
+    font-family: Pencil;
+    src: url(./assets/fonts/Pencil-Regular.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -17,12 +27,27 @@ body, html{
     background-size: cover;
 } */
 
+.title-bar-heading{
+    font-family: TicTacToe, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-size: 5rem;
+}
+
+.title-bar{
+    width: 100%;
+    height: 5rem;
+    border: 1px solid brown;
+    position: fixed;
+    top: 0;
+}
+
 .container{
     border: 1px solid blue;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .box-grid{
@@ -39,4 +64,10 @@ body, html{
 .box{
     border: 1px solid red;
     border-radius: 5px;
+    font-family: Pencil, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0;
+    font-size: 8rem;
 }
