--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ body, html{
 } */
 
 .title-bar-heading{
-    font-family: TicTacToe, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Pencil, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     font-size: 5rem;
+    font-weight: 600;
 }
 
 .title-bar{
