--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body, html{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .box-grid{
@@ -71,4 +72,17 @@ body, html{
     align-items: center;
     flex: 0;
     font-size: 8rem;
+}
+
+.player-choice-container{
+    display: flex;
+    border: 1px solid black;
+    justify-content: space-around;
+    width: 10rem;
+}
+
+.choice-x,
+.choice-o{
+    font-family: Pencil;
+    font-size: 2rem;
 }
